[package]
name = "rusty-obegraensad"
version = "0.1.0"
authors = ["Ane Johanson"]
description = "Display custom animations on IKEA's OBEGRÄNSAD using Rust on the Raspberry Pi Pico"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
fugit = "0.3"
panic-halt = "0.2"
portable-atomic = { version = "1.6", default-features = false, features = ["require-cas", "critical-section"] }
rp-pico = "0.9"
rand = { version = "0.8", default-features = false }
rand_xoshiro = "0.6"
